Add QR provisioning of app-private Android client identities
